_dbus_check_fdleaks_enter, _dbus_check_fdleaks_leave: whitespace

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=35173
Reviewed-by: Colin Walters <walters@verbum.org>